log/build_2022-08-07_19-49-39/robot_control/stderr.log
  File "/home/louis/dev_robot/install/robot_control/lib/python3.8/site-packages/robot_control/Control_V3.py", line 73
    match self.left_motor:
          ^
SyntaxError: invalid syntax

